<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto" >

    <PreferenceCategory android:title="@string/pref_calculation_settings_title" >
        <com.anna.sent.soft.womancyc.preferences.NumberPickerPreference
            android:defaultValue="@integer/defaultMenstrualCycleLen"
            android:key="pref_default_menstrual_cycle_len"
            android:max="@integer/maxMenstrualCycleLen"
            android:title="@string/pref_default_menstrual_cycle_len_title"
            custom:min="@integer/minMenstrualCycleLen"
            custom:unit="@string/days" />

        <CheckBoxPreference
            android:defaultValue="@bool/useAverage"
            android:key="pref_use_average"
            android:title="@string/pref_use_average_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_safety_settings_title" >
        <com.anna.sent.soft.womancyc.preferences.PasswordPreference
            android:defaultValue=""
            android:key="pref_password"
            android:title="@string/pref_password_title" />

        <Preference
            android:key="pref_send_password_to_email"
            android:summary="@string/pref_send_password_to_email_summary"
            android:title="@string/pref_send_password_to_email_title" >
            <intent android:action="com.anna.sent.soft.womancyc.actions.EmailPasswordActionActivity" />
        </Preference>

        <CheckBoxPreference
            android:defaultValue="@bool/lockAutomatically"
            android:key="pref_lock_automatically"
            android:title="@string/pref_lock_automatically_title" />
        <CheckBoxPreference
            android:defaultValue="@bool/hideWidget"
            android:key="pref_hide_widget"
            android:summary="@string/pref_hide_widget_summary"
            android:title="@string/pref_hide_widget_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_ui_settings"
        android:title="@string/pref_ui_settings_title" >
        <ListPreference
            android:defaultValue="@integer/defaultTheme"
            android:dialogTitle="@string/pref_theme_title"
            android:entries="@array/theme"
            android:entryValues="@array/theme_values"
            android:key="pref_theme"
            android:title="@string/pref_theme_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_other_settings_title" >
        <Preference
            android:summary="@string/pref_rate_summary"
            android:title="@string/pref_rate_title" >
            <intent android:action="com.anna.sent.soft.womancyc.actions.MarketWomanCycActionActivity" />
        </Preference>
        <Preference
            android:summary="@string/pref_support_summary"
            android:title="@string/pref_support_title" >
            <intent android:action="com.anna.sent.soft.womancyc.actions.EmailSupportActionActivity" />
        </Preference>
        <Preference
            android:summary="@string/pref_childbirthdate_summary"
            android:title="@string/pref_childbirthdate_title" >
            <intent android:action="com.anna.sent.soft.womancyc.actions.MarketChildbirthDateActionActivity" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>